--- a/privacy-engineer.html
+++ b/privacy-engineer.html
@@ -51,7 +51,7 @@
 <p><span class="badge badge-light">Toronto, ON</span></p>
 <p>Posted on: 2019-10-27</p>
 <hr/>
-<h5><a href='https://careers.jobscore.com/careers/idpeducationpty/jobs/privacy-specialist-dfEU9s9Ker6ARKaKiznY58'>Privacy Specialist #1136 job at IDP Education Ltd in Melbourne City, Victoria, Australia, powered by JobScore</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://careers.jobscore.com/careers/idpeducationpty/jobs/privacy-specialist-dfEU9s9Ker6ARKaKiznY58'>Privacy Specialist #1136 job at IDP Education Ltd in Melbourne City, Victoria, Australia, powered by JobScore</a></h5> 
 <p><span class="badge badge-light">Melbourne Australia Melbourne Australia Melbourne</span></p>
 <p>Posted on: 2019-10-25</p>
 <hr/>
@@ -184,7 +184,7 @@ experience?...</p>
 compliance solutions that tens of thousands of organizations worldwide rely on to 
 trust?...</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/PrimastepLLC/743999694425919-privacy-security-risk-analyst'>Primastep LLC Privacy / Security Risk Analyst | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/PrimastepLLC/743999694425919-privacy-security-risk-analyst'>Primastep LLC Privacy / Security Risk Analyst | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Arlington, VA</span></p>
 <p>Posted on: 2019-09-07</p>
 <hr/>
@@ -257,7 +257,7 @@ CA &amp; Sugar Land, TX: perform research into data obfuscation methods for?...<
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-08-17</p>
 <hr/>
-<h5><a href='http://jobs.jobvite.com/loandepot/job/oH4Jafwo'>loanDepot Careers - Privacy Analyst</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/loandepot/job/oH4Jafwo'>loanDepot Careers - Privacy Analyst</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-08-12</p>
 <hr/>
@@ -274,7 +274,7 @@ and data protection risks in connection with Everlaw's products, services, and?.
 <p><span class="badge badge-light">Washington, District of Columbia</span></p>
 <p>Posted on: 2019-07-29</p>
 <hr/>
-<h5><a href='https://www.workable.com/j/126B354682'>TechOp Solutions International - Jobs: Privacy Analyst - Apply online</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://www.workable.com/j/126B354682'>TechOp Solutions International - Jobs: Privacy Analyst - Apply online</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>2 days ago ... Apply online for the job of Privacy Analyst at TechOp Solutions International.</p>
 <hr/>
@@ -294,7 +294,7 @@ and data protection risks in connection with Everlaw's products, services, and?.
 <p><span class="badge badge-light">California</span></p>
 <p>Posted on:: 2019-07-05</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/reachire/57ca88ba-f6b2-4cc5-859b-83113340ee7c'>reacHIRE - Fidelity Investments - Privacy Compliance Analyst (Return-to-Work Program)</a></h5> 
+<h5><a href='https://jobs.lever.co/reachire/57ca88ba-f6b2-4cc5-859b-83113340ee7c'>reacHIRE - Fidelity Investments - Privacy Compliance Analyst (Return-to-Work Program)</a></h5> 
 <p><span class="badge badge-light">Boston, MA</span></p>
 <p>Posted on: 2019-07-04</p>
 <hr/>
@@ -318,7 +318,7 @@ and data protection risks in connection with Everlaw's products, services, and?.
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-06-26</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/bluevine/5da3ef9b-70ec-41d9-87ee-7787de7770d2'>BlueVine - Privacy Analyst</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/bluevine/5da3ef9b-70ec-41d9-87ee-7787de7770d2'>BlueVine - Privacy Analyst</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-06-14</p>
 <hr/>
@@ -330,7 +330,7 @@ and data protection risks in connection with Everlaw's products, services, and?.
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-06-13</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://frb.referrals.selectminds.com/jobs/data-privacy-associate-new-jersey-location-8984'>Data Privacy Associate (New Jersey location) - The Federal Reserve System Careers</a></h5> 
+<h5><a href='https://frb.referrals.selectminds.com/jobs/data-privacy-associate-new-jersey-location-8984'>Data Privacy Associate (New Jersey location) - The Federal Reserve System Careers</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-06-11</p>
 <hr/>
@@ -374,7 +374,7 @@ Prime's privacy program, working closely with privacy team members as well as?..
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-05-18</p>
 <hr/>
-<h5><a href='https://eygbl.referrals.selectminds.com/jobs/global-privacy-counsel-supervising-associate-80841'>Global Privacy Counsel Supervising Associate - EY Careers</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://eygbl.referrals.selectminds.com/jobs/global-privacy-counsel-supervising-associate-80841'>Global Privacy Counsel Supervising Associate - EY Careers</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Apr 28, 2019 ... Blockchain Cryptographic Research Scientist (London/Paris). Global Services. 
 Core Business Services. Requisition #: GLO000QQ. Knowledge Manager?...</p>
@@ -413,7 +413,7 @@ affect?...</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-04-30</p>
 <hr/>
-<h5><a href='https://www.datarobot.com/privacy/'>Privacy Policy | Machine Learning Automation &amp; Data Analysis Software</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://www.datarobot.com/privacy/'>Privacy Policy | Machine Learning Automation &amp; Data Analysis Software</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-04-29</p>
 <hr/>
