--- a/ui.html
+++ b/ui.html
@@ -41,22 +41,22 @@
     <div class="container">
 <!--Begin body here --> 
 <h5><a href='https://ah-recruitment.join.com/jobs/468705-it-software-development-lead-m-w-d-sap'>Job @ Althen Hensel - RECRUITMENT SOLUTIONS (Munic... | JOIN</a></h5> 
-<p><span class="badge badge-light"></span></p>
+<p><span class="badge badge-light">Munich</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
 <h5><a href='https://ah-recruitment.join.com/jobs/468638-projektleiter-m-w-d-sap-business-analytics'>Job @ Althen Hensel - RECRUITMENT SOLUTIONS (Munic... | JOIN</a></h5> 
-<p><span class="badge badge-light"></span></p>
+<p><span class="badge badge-light">Munich</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
 <h5><a href='https://ah-recruitment.join.com/jobs/467942-it-application-consultant-m-w-d-sap-produktionsplanung-pp'>Job @ Althen Hensel - RECRUITMENT SOLUTIONS (Munic... | JOIN</a></h5> 
-<p><span class="badge badge-light"></span></p>
+<p><span class="badge badge-light">Munich</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
 <h5><a href='https://jobs.smartrecruiters.com/BuzzClanLLC/743999698325214-senior-system-architect-with-pega-ui'>BuzzClan LLC Senior System Architect with Pega  UI | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Irving, TX</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
-<h5><a href='https://jobs.jobvite.com/nstar-financial/job/opDrbfwo'>Orion Advisor Solutions Careers - UI/UX Designer</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/nstar-financial/job/opDrbfwo'>Orion Advisor Solutions Careers - UI/UX Designer</a></h5> 
 <p><span class="badge badge-light">Omaha, Nebraska</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
@@ -148,7 +148,7 @@
 <p><span class="badge badge-light">London, United Kingdom</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/FultonGarrickLtd/743999694160012-ux-ui-product-designer-mid-level-or-senior-number-1-tech-company'>Fulton Garrick Ltd UX/UI PRODUCT DESIGNER (MID-LEVEL OR SENIOR)  - NUMBER 1 TECH COMPANY | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/FultonGarrickLtd/743999694160012-ux-ui-product-designer-mid-level-or-senior-number-1-tech-company'>Fulton Garrick Ltd UX/UI PRODUCT DESIGNER (MID-LEVEL OR SENIOR)  - NUMBER 1 TECH COMPANY | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">London, United Kingdom</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
@@ -174,7 +174,7 @@
 <p><span class="badge badge-light">Indianapolis, IN</span></p>
 <p>Posted on:: 2019-10-28</p>
 <hr/>
-<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qHV9Vfwq&k=Job&j=oJqkbfwo&__jvst=Employee+Referral&__jvsd=s2yligwY&__jvsc=Twitter&bid=nmTEmMww'>Jobvite, Inc. Careers - UI Developer</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qHV9Vfwq&k=Job&j=oJqkbfwo&__jvst=Employee+Referral&__jvsd=s2yligwY&__jvsc=Twitter&bid=nmTEmMww'>Jobvite, Inc. Careers - UI Developer</a></h5> 
 <p><span class="badge badge-light">Indianapolis, IN</span></p>
 <p>Posted on:: 2019-10-28</p>
 <hr/>
@@ -188,7 +188,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-28</p>
 <hr/>
-<h5><a href='https://recruit.apo.ucla.edu/JPF05081'>Postdoctoral Scholar in Uterine Cancers - UCLA G.O. Discovery Laboratory (JPF05081) - UCLA Academic RECRUIT</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://recruit.apo.ucla.edu/JPF05081'>Postdoctoral Scholar in Uterine Cancers - UCLA G.O. Discovery Laboratory (JPF05081) - UCLA Academic RECRUIT</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-28</p>
 <hr/>
@@ -222,7 +222,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-28</p>
 <hr/>
-<h5><a href='https://maxcluster.join.com/jobs/463371-ui-ux-frontend-designer-m-w-d'>Job @ maxcluster (Paderborn): UI/UX Frontend Desig... | JOIN</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://maxcluster.join.com/jobs/463371-ui-ux-frontend-designer-m-w-d'>Job @ maxcluster (Paderborn): UI/UX Frontend Desig... | JOIN</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
@@ -240,7 +240,7 @@
 <p><span class="badge badge-light">London</span></p>
 <p>Posted on:: 2019-10-28</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://afterdigital.co.uk/about/jobs/graduate-ux-ui-designer/'>Graduate UX/UI Designer | Vacancies | After Digital</a></h5> 
+<h5><a href='https://afterdigital.co.uk/about/jobs/graduate-ux-ui-designer/'>Graduate UX/UI Designer | Vacancies | After Digital</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-28</p>
 <hr/>
@@ -339,7 +339,7 @@ Senior UI Engineer at Toggle in Greater London | React jobs | 42jobs.io
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-27</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/n3twork/job/oVBpbfwQ'>N3TWORK Careers - Senior User Experience Designer (UI/UX)</a></h5> 
+<h5><a href='https://jobs.jobvite.com/n3twork/job/oVBpbfwQ'>N3TWORK Careers - Senior User Experience Designer (UI/UX)</a></h5> 
 <p><span class="badge badge-light">Santiago</span></p>
 <p>Posted on: 2019-10-27</p>
 <hr/>
@@ -355,7 +355,7 @@ Senior UI Engineer at Toggle in Greater London | React jobs | 42jobs.io
 <p><span class="badge badge-light">France</span></p>
 <p>Posted on: 2019-10-27</p>
 <hr/>
-<h5><a href='https://jobs.jobvite.com/nicesystems/job/ocglbfwI'>NICE Careers - Analytics UI Engineer Intern</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/nicesystems/job/ocglbfwI'>NICE Careers - Analytics UI Engineer Intern</a></h5> 
 <p><span class="badge badge-light">Salt Lake City, Utah  Salt Lake City, UT</span></p>
 <p>Posted on: 2019-10-27</p>
 <hr/>
@@ -379,7 +379,7 @@ Senior UI Engineer at Toggle in Greater London | React jobs | 42jobs.io
 <p><span class="badge badge-light">Z?rich, Switzerland</span></p>
 <p>Posted on: 2019-10-27</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.cisco.com/jobs/ProjectDetail/UI-Developer/1276995'>UI Developer</a></h5> 
+<h5><a href='https://jobs.cisco.com/jobs/ProjectDetail/UI-Developer/1276995'>UI Developer</a></h5> 
 <p><span class="badge badge-light">Canada</span></p>
 <p>Posted on:: 2019-10-27</p>
 <hr/>
@@ -387,7 +387,7 @@ Senior UI Engineer at Toggle in Greater London | React jobs | 42jobs.io
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-27</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://admind1.recruitee.com/o/uxui-designer-krakow'>
+<h5><a href='https://admind1.recruitee.com/o/uxui-designer-krakow'>
       UX/UI Designer - Admind
     </a></h5> 
 <p><span class="badge badge-light">Krak?w Krak?w</span></p>
@@ -417,7 +417,7 @@ Senior UI Engineer at Toggle in Greater London | React jobs | 42jobs.io
 <p><span class="badge badge-light">San Diego, California  San Diego, CA</span></p>
 <p>Posted on:: 2019-10-26</p>
 <hr/>
-<h5><a href='https://www.hulldailymail.co.uk/news/jobs/tui-hiring-hull-discount-holidays-3469937'>TUI is hiring in Hull and you will get generous discounts on holidays - Hull Live</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://www.hulldailymail.co.uk/news/jobs/tui-hiring-hull-discount-holidays-3469937'>TUI is hiring in Hull and you will get generous discounts on holidays - Hull Live</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-26</p>
 <hr/>
@@ -443,7 +443,7 @@ Senior UI Engineer at Toggle in Greater London | React jobs | 42jobs.io
 <p><span class="badge badge-light">Chicago, Illinois</span></p>
 <p>Posted on:: 2019-10-26</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://activeprospect.applytojob.com/apply/DRQS0Qpb3w/Senior-UI-Engineer-Remote-Okay-To-The-Right-Candidate'>Senior UI Engineer (Remote okay to the right candidate) - ActiveProspect, Inc. - Career Page</a></h5> 
+<h5><a href='http://activeprospect.applytojob.com/apply/DRQS0Qpb3w/Senior-UI-Engineer-Remote-Okay-To-The-Right-Candidate'>Senior UI Engineer (Remote okay to the right candidate) - ActiveProspect, Inc. - Career Page</a></h5> 
 <p><span class="badge badge-light">Austin, TX</span></p>
 <p>Posted on: 2019-10-26</p>
 <hr/>
